--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/runtime": "^7.22.6",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "dotenv": "^16.3.1",
     "eslint": "^8.45.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
@@ -40,6 +41,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
+    "firebase": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2"
